# simple_ros2

./: CMakeLists.txt  package.xml
include/simple_ros2/: minimal_publisher.cpp  minimal_publisher.hpp  simple_subscriber.cpp  simple_subscriber.hpp
launch/: test_ros2.py  test_ros2_python.py
src/: minimal_publisher_node.cpp  simple_subscriber_node.cpp
